--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@ethersproject/providers": "^5.6.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
     "@self.id/framework": "^0.2.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "next": "12.1.0",
     "next-themes": "^0.1.1",
     "react": "17.0.2",
