--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cbj/ceramic-append-collection": "^0.1.19",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@ethersproject/providers": "^5.6.1",
@@ -16,8 +17,11 @@
     "@mui/material": "^5.5.1",
     "@self.id/framework": "^0.2.0",
     "@self.id/web": "^0.3.0",
+    "@types/jest": "^27.4.1",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "ethers": "^5.6.1",
+    "lit-js-sdk": "^1.1.149",
     "next": "12.1.0",
     "next-themes": "^0.1.1",
     "react": "17.0.2",
