--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@ethersproject/providers": "^5.6.1",
+    "@glazed/tile-loader": "^0.1.3",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
     "@self.id/framework": "^0.2.0",
