--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.41",
     "@types/react-blockies": "^1.4.1",
+    "@types/styled-components": "^5.1.24",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "typescript": "^4.6.2"
