--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ethers": "^5.6.1",
     "lit-js-sdk": "^1.1.149",
     "next": "12.1.0",
+    "next-color-mode": "0.0.1",
     "next-themes": "^0.1.1",
     "react": "17.0.2",
     "react-blockies": "^1.4.1",
