--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-themes": "^0.1.1",
     "react": "17.0.2",
     "react-blockies": "^1.4.1",
+    "react-chat-ui": "^0.4.0",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3"
   },
