--- a/package.json
+++ b/package.json
@@ -13,34 +13,34 @@
     "@cbj/ceramic-append-collection": "git+https://github.com/codynhat/ceramic-append-collection.git",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
-    "@ethersproject/providers": "^5.6.1",
+    "@ethersproject/providers": "^5.6.2",
     "@glazed/tile-loader": "^0.1.3",
     "@mui/icons-material": "^5.5.1",
-    "@mui/material": "^5.5.2",
+    "@mui/material": "^5.5.3",
     "@self.id/framework": "^0.2.0",
     "@self.id/web": "^0.3.0",
     "@types/jest": "^27.4.1",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
-    "ethers": "^5.6.1",
+    "ethers": "^5.6.2",
     "graphql": "^16.3.0",
-    "lit-js-sdk": "^1.1.149",
+    "lit-js-sdk": "^1.1.154",
     "multiformats": "^9.6.4",
-    "next": "12.1.0",
+    "next": "^12.1.3",
     "next-color-mode": "0.0.1",
     "next-themes": "^0.1.1",
     "react": "17.0.2",
     "react-blockies": "^1.4.1",
     "react-chat-ui": "^0.4.0",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
-    "@types/react": "^17.0.41",
+    "@types/react": "^17.0.43",
     "@types/react-blockies": "^1.4.1",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
-    "typescript": "^4.6.2"
+    "eslint": "^8.12.0",
+    "eslint-config-next": "^12.1.3",
+    "typescript": "^4.6.3"
   }
 }
